# LogEngine2

./: .gitignore  AUTHORS  INSTALL.W32  Makefile.in  NEWS  README  README.md  README_OLD.md  TO_DO.txt  WHATSNEW.txt  configure  configure.ac  libtool
example/: LogExample.lfg  example.cpp
include/: BaseSink.h  Common-hdr.h  Common.h  Compare.h  DynamicArrays.h  Exceptions.h  FileSink.h  FileStream-hdr.h  FileStream.h  IniReader.h  Layout.h  LogEngine-hdr.h  LogEngine.h  LogEvent.h  Logger.h  Pattern-hdr.h  Pattern.h  PatternLayout.h  Properties-hdr.h  Properties.h  RotatingFileSink.h  Sink.h  SynchronizedQueue.h  Version.h
lib/: LogEngine2.lib  LogEngine2_64.lib  LogEngine2_64MDd.lib  LogEngine2d.lib  LogEngined.lib  LogEngined64.lib
prj/Builder/: LogEngineGroup.dsk  LogEngineGroup.groupproj  LogEngineGroup.groupproj.local  LogEngineGroup.~dsk
prj/msvc/: LogEngine2.sln
src/: Common.cpp  Compare.cpp  DynamicArrays.cpp  FileSink.cpp  FileStream.cpp  LogEngine.cpp  LogEngineOLD.cpp  LogEvent.cpp  Logger.cpp  Makefile.am  Makefile.in  Pattern.cpp  PatternLayout.cpp  Properties.cpp  SynchronizedQueue.cpp  VersionInfo.cpp
test/: Makefile.am  Makefile.in  testConfigFile.cpp  testConfigFile.h  testIniReader.cpp  testIniReader.h  testLine.cpp  testLine.h  testLog.cpp  testLog.h  testLogger.cpp  testLogger.h  testProperties.cpp  testProperties.h  testRunner.cpp  testTStream.cpp  testTStream.h  testThreadLog.cpp  testThreadLog.h  testUtils.cpp  testUtils.h
test/testFiles/: example.lfg  example2.lfg  test01.lfg  test02.lfg  test03.lfg  test1.lfg  test10.lfg  test11.lfg  test12.lfg  test13.lfg  test14.lfg  test2.lfg  test3.lfg  test4.lfg  test5.lfg  test6.lfg  test7.lfg  test8.lfg  test9.lfg  testini1.ini  testini10.ini  testini11.ini  testini2.ini  testini3.ini  testini4.ini  testini5.ini  testini6.ini  testini7.ini  testini8.ini  testini9.ini
(+27 files in other folders)
