lib_LTLIBRARIES = liblogengine.la
liblogengine_la_SOURCES = Compare.cpp DynamicArrays.cpp FileStream.cpp LogEngine.cpp LogEvent.cpp Properties.cpp\
 functions.cpp Line.cpp SynchronizedQueue.cpp
 
liblogengine_la_CXXFLAGS = -Wall -Wno-reorder -I../include/logengine

EXTRA_DIST = Compare.h DynamicArrays.h FileStream.h LogEngine.h LogEvent.h Properties.h functions.h Line.h SynchronizedQueue.h

